[package]
name = "mini-sshd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dirs = "5.0.1"
enum-iterator = "2.1.0"
env_logger = "0.11.3"
indexmap = "2.2.6"
log = "0.4.21"
nix = { version = "0.29.0", features = ["term"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
openssl = "0.10.64"
pretty-hex = "0.4.1"
